<resources>
    <string name="app_name">EtherMesh</string>
    <string name="app_description">EtherMesh is an open, trustworthy and decentralized file synchronization application.</string>
    <string name="welcome_title">Welcome to EtherMesh for Android</string>
    <string name="welcome_text">EtherMesh is an open-source file synchronization application.</string>
    <string name="cont">Continue</string>
    <string name="main_menu">Main Menu</string>
    <string name="add_folder">Add Folder</string>
    <string name="share_device_id">Share Device ID</string>
    <string name="send_device_id_to">Send Device ID to</string>
    <string name="usage_reporting_dialog_title">Allow Anonymous Usage Reporting?</string>
    <string name="usage_reporting_dialog_description">Aggregated statistics are publicly available at https://data.syncthing.net.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="off">off</string>
    <string name="open_website">Open Website</string>
    <string name="toast_write_storage_permission_required">Write storage permission is required for this app</string>
    <string name="device_rejected">Device %1$s wants to connect</string>
    <string name="ignore">Ignore</string>
    <string name="dialog_disable_battery_optimization_title">Battery Optimization</string>
    <string name="dialog_disable_battery_optimization_message">Android may stop synchronization after some time. To prevent this, turn off battery optimization.</string>
    <string name="dialog_disable_battery_optimization_later">Later</string>
    <string name="dialog_disable_battery_optimization_dont_show_again">Don\'t show again</string>
    <string name="dialog_disable_battery_optimization_turn_off">Turn off for EtherMesh</string>
    <string name="dialog_disable_battery_optimizations_not_supported">Your device does not support disabling battery optimizations</string>
    <string name="api_loading">Loading&#8230;</string>
    <string name="web_gui_creating_key">Generating secure keys. This may take a few minutes.</string>
    <string name="syncthing_loading_slow_message">EtherMesh is taking very long to load.</string>
    <string name="folders_fragment_title">Folders</string>
    <string name="folder_progress_format">%1$s (%2$d%%)</string>
    <string name="folder_list_empty">No folders found</string>
    <plurals name="files">
        <item quantity="one">%1$d / %2$d file</item>
        <item quantity="other">%1$d / %2$d files</item>
    </plurals>
    <string name="devices_fragment_title">Devices</string>
    <string name="devices_list_empty">No devices found</string>
    <string name="device_up_to_date">Up to Date</string>
    <string name="device_syncing">Syncing (%1$d%%)</string>
    <string name="device_disconnected">Disconnected</string>
    <string name="download_title">Download</string>
    <string name="upload_title">Upload</string>
    <string name="download_title_colon">Download:\u0020</string>
    <string name="upload_title_colon">Upload:\u0020</string>
    <string name="cpu_usage">CPU Usage</string>
    <string name="ram_usage">RAM Usage</string>
    <string name="announce_server">Announce Server</string>
    <string name="restart">Restart</string>
    <string name="dialog_confirm_restart">Do you want to restart EtherMesh?</string>
    <string name="folder_id">Folder ID</string>
    <string name="folder_label">Folder Label</string>
    <string name="directory">Directory</string>
    <string name="folder_master">Send Only</string>
    <string name="devices">Devices</string>
    <string name="file_versioning">File Versioning</string>
    <string name="keep_versions">Keep Versions</string>
    <string name="delete_folder">Delete Folder</string>
    <string name="create_folder">Create Folder</string>
    <string name="edit_folder">Edit Folder</string>
    <string name="create">Create</string>
    <string name="delete_folder_confirm">Do you really want to delete this folder?</string>
    <string name="remove_folder_confirm">Do you really want to remove this folder?</string>
    <string name="folder_id_required">The folder ID must not be empty</string>
    <string name="folder_path_required">The folder path must not be empty</string>
    <string name="dialog_confirm_export">Do you really want to export your configuration?</string>
    <string name="dialog_confirm_import">Do you really want to import a new configuration?</string>
    <string name="device_id">Device ID</string>
    <string name="name">Name</string>
    <string name="addresses">Addresses</string>
    <string name="current_address">Current Address</string>
    <string name="compression">Compression</string>
    <string-array name="compress_entries">
        <item>Never</item>
        <item>Metadata</item>
        <item>Always</item>
    </string-array>
    <string-array name="compress_values">
        <item>never</item>
        <item>metadata</item>
        <item>always</item>
    </string-array>
    <string name="introducer">Introducer</string>
    <string name="delete_device">Delete Device</string>
    <string name="add_device">Add Device</string>
    <string name="add">Add</string>
    <string name="edit_device">Edit Device</string>
    <string name="delete_device_confirm">Do you really want to delete this device?</string>
    <string name="remove_device_confirm">Do you really want to remove this device?</string>
    <string name="device_id_required">The device ID must not be empty</string>
    <string name="device_name_required">The device name must not be empty</string>
    <string name="scan_qr_code_description">Scan QR Code</string>
    <string name="toast_root_denied">Did not get root permissions</string>
    <string name="web_gui_title">Web GUI</string>
    <string name="web_gui_loading">Waiting for GUI</string>
    <string name="settings_title">Settings</string>
    <string name="category_syncthing_android">EtherMesh-Android</string>
    <string name="always_run_in_background">Always run in background</string>
    <string name="always_run_in_background_enabled">EtherMesh always runs in the background.</string>
    <string name="always_run_in_background_disabled">EtherMesh only runs when explicitly started.</string>
    <string name="sync_only_charging">Run only when charging</string>
    <string name="sync_only_wifi">Run only on wifi</string>
    <string name="sync_only_wifi_ssids">Restrict to certain wifi networks</string>
    <string name="sync_only_wifi_ssids_all">Sync on all wifi networks</string>
    <string name="sync_only_wifi_ssids_values">Sync only while connected to: %1$s</string>
    <string name="sync_only_wifi_ssids_wifi_turn_on_wifi">Please turn on Wi-Fi to select networks.</string>
    <string name="respect_battery_saving_title">Respect Android battery saving setting</string>
    <string name="respect_battery_saving_summary">Disable EtherMesh if battery saving is active</string>
    <string name="advanced_folder_picker">Use advanced Folder Picker</string>
    <string name="advanced_folder_picker_summary">Select any folder on the device for syncing</string>
    <string name="use_root_title">Run EtherMesh as Superuser</string>
    <string name="use_root_summary">This is an unstable feature.</string>
    <string name="notification_type_title">Notification</string>
    <string name="notification_type_summary">Choose the notification type</string>
    <string-array name="notification_type_entries">
        <item>Normal</item>
        <item>Low Priority</item>
        <item>None</item>
    </string-array>
    <string-array name="notification_type_entry_values">
        <item>normal</item>
        <item>low_priority</item>
        <item>none</item>
    </string-array>
    <string name="category_syncthing">EtherMesh</string>
    <string name="syncthing_options">EtherMesh Options</string>
    <string name="device_name">Device Name</string>
    <string name="listen_address">Sync Protocol Listen Addresses</string>
    <string name="max_recv_kbps">Incoming Rate Limit (KiB/s)</string>
    <string name="max_send_kbps">Outgoing Rate Limit (KiB/s)</string>
    <string name="global_announce_enabled">Global Discovery</string>
    <string name="local_announce_enabled">Local Discovery</string>
    <string name="upnp_enabled">Enable UPnP</string>
    <string name="global_announce_server">Global Discovery Server</string>
    <string name="enable_relaying">Enable Relaying</string>
    <string name="usage_reporting">Anonymous Usage Reporting</string>
    <string name="syncthing_gui">EtherMesh GUI</string>
    <string name="gui_address">GUI Listen Addresses</string>
    <string name="gui_user">GUI Authentication User</string>
    <string name="gui_password">GUI Authentication Password</string>
    <string name="export_config">Export Configuration</string>
    <string name="experimental_settings">Experimental</string>
    <string name="keep_wakelock_while_binary_running">Keep CPU awake</string>
    <string name="keep_wakelock_while_binary_running_summary">Use if disconnects occur on battery.</string>
    <string name="run_as_foreground_service">Run as foreground service</string>
    <string name="run_as_foreground_service_summary">Less likely to be stopped by Android.</string>
    <string name="use_tor_title">Use Tor</string>
    <string name="use_tor_summary">Requires Orbot.</string>
    <string name="config_export_successful">Config exported to %1$s</string>
    <string name="import_config">Import Configuration</string>
    <string name="config_imported_successful">Config imported</string>
    <string name="config_import_failed">Config import failed</string>
    <string name="sttrace_title">STTRACE Options</string>
    <string name="environment_variables">Environment variables</string>
    <string name="toast_invalid_sttrace">Invalid STTRACE options</string>
    <string name="toast_invalid_username">Invalid username</string>
    <string name="toast_invalid_password">Invalid password</string>
    <string name="streset_title">Reset Database</string>
    <string name="streset_question">Are you sure you want to clear EtherMesh\'s index database?</string>
    <string name="streset_done">Successfully reset database</string>
    <string name="category_about">About</string>
    <string name="open_log">Open Log</string>
    <string name="open_log_summary">Open log window</string>
    <string name="notify_crashes_title">Notify about crashes</string>
    <string name="notify_crashes_summary">Show notification on crash</string>
    <string name="syncthing_forum_title">EtherMesh Forum</string>
    <string name="syncthing_forum_summary">Go to forum</string>
    <string name="syncthing_forum_url" translatable="false">https://forum.syncthing.net/</string>
    <string name="report_issue_title">Report Issue</string>
    <string name="report_issue_summary">Open issue tracker</string>
    <string name="folder_title">Folder</string>
    <string name="privacy_title">Privacy</string>
    <string name="introduction">Introduction</string>
    <string name="back">Back</string>
    <string name="run_conditions_title">Run Conditions</string>
    <string name="run_conditions_summary">When EtherMesh runs.</string>
    <string name="run_on_wifi_title">Run on Wi-Fi</string>
    <string name="run_on_metered_wifi_title">Run on Metered Wi-Fi</string>
    <string name="run_on_whitelisted_wifi_title">Run on Whitelisted Wi-Fi</string>
    <string name="run_on_mobile_data_title">Run on Mobile Data</string>
    <string name="power_source_title">Power Source</string>
    <string name="photo_shoot_launcher_title">Camera Sync</string>
    <string name="photo_shoot_intro_permission_desc">EtherMesh Camera needs your permission to take photos and store them. Grant permissions and tap Continue.</string>
    <string name="grant_storage_permission">Grant Storage Permission</string>
    <string name="grant_camera_permission">Grant Camera Permission</string>
</resources>