<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center_horizontal">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/photo_shoot_launcher_title"
        android:textAppearance="?attr/textAppearanceHeadlineMedium"
        android:gravity="center"
        android:paddingBottom="16dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/photo_shoot_intro_permission_desc"
        android:paddingBottom="24dp" />

    <Button
        android:id="@+id/btnGrantStoragePerm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/grant_storage_permission" />

    <Button
        android:id="@+id/btnGrantCameraPerm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/grant_camera_permission" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_back"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/back" />

        <Button
            android:id="@+id/btn_go"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cont" />
    </LinearLayout>

</LinearLayout>
