<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/widget_toolbar" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <EditText
                    android:id="@+id/label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/folder_label" />

                <EditText
                    android:id="@+id/id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/folder_id" />

                <TextView
                    android:id="@+id/directoryTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/directory"
                    android:padding="8dp" />

                <Button
                    android:id="@+id/selectAdvancedDirectory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/advanced_folder_picker" />

                <TextView
                    android:id="@+id/accessExplanationView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp" />

                <LinearLayout
                    android:id="@+id/folderTypeContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <TextView
                        android:id="@+id/folderTypeTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/folder_title" />

                    <TextView
                        android:id="@+id/folderType"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/folderTypeDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/fileWatcher"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/always_run_in_background" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/folderPause"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/restart" />

                <LinearLayout
                    android:id="@+id/customSyncConditionsContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/customSyncConditionsSwitch"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/run_conditions_title" />

                    <TextView
                        android:id="@+id/customSyncConditionsDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/run_conditions_summary" />

                    <TextView
                        android:id="@+id/customSyncConditionsDialog"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/pullOrderContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <TextView
                        android:id="@+id/pullOrderType"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/pullOrderDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/versioningContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <TextView
                        android:id="@+id/versioningType"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/versioningDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ignoreDeleteContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp">

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/ignoreDelete"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/delete_folder" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/runScriptContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp">

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/runScriptSwitch"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/always_run_in_background" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/devices_fragment_title" />

                <LinearLayout
                    android:id="@+id/devicesContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" />

                <LinearLayout
                    android:id="@+id/editIgnoresContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <TextView
                        android:id="@+id/edit_ignore_list_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ignore" />

                    <EditText
                        android:id="@+id/edit_ignore_list_content"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="top"
                        android:minLines="3" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <View
        android:id="@+id/savingOverlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000"
        android:visibility="gone" />

</FrameLayout>
